--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "nps build",
+    "postinstall": "npm start build",
+    "prepare": "npm start build",
     "start": "nps",
     "test": "nps test"
   },
