--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dist"
   ],
   "scripts": {
-    "postinstall": "npm start build",
-    "prepare": "npm start build",
+    "postinstall": "npm install && npm start build",
     "build": "nps build",
     "start": "nps",
     "test": "nps test"
